--- a/manifest.json
+++ b/manifest.json
@@ -79,8 +79,12 @@
                     "pattern": "employees/{employeeId}",
                     "name": "employee",
                     "target": "employee"
+                },
+                {
+                    "pattern": "employees/{employeeId}/employeeResume",
+                    "name": "employeeResume",
+                    "target": "employeeResume"
                 }
-
             ],
             "targets": {
                 "home": {
@@ -99,6 +103,11 @@
                 "employee": {
                     "viewName": "employee.Employee",
                     "viewLevel": 3
+                },
+                "employeeResume": {
+                    "viewName": "employee.Resume",
+                    "viewLevel": 4,
+                    "transition": "flip"
                 }
             }
         }
